<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">GaitKeeper</string>
    <string name="action_settings">Settings</string>
    <string name="accelerometer">Accelerometer:</string>
    <string name="_0_0">0.0</string>
    <string name="start">Start</string>
    <string name="stop">Stop</string>
    <string name="radio_walk">walk</string>
    <string name="radio_jog">jog</string>
    <string name="radio_run">run</string>
    <string name="radio_sprint">sprint</string>

</resources>
